--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Laboratory work 11</title>
+</head>
+<body>
+    <p> <a href="tasks/task1.html">Task 1.</a> </p>
+    <p> <a href="tasks/task2.html">Task 2.</a> </p>
+    <p> <a href="tasks/task3.html">Task 3.</a> </p>
+    <p> <a href="tasks/task4.html">Task 4.</a> </p>
+</body>
+</html>
