--- a/tasks/task1.html
+++ b/tasks/task1.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Working with Dialog Boxes</title>
+</head>
+<body>
+    <script>
+        "use strict";
+        alert("My first dialog box");
+        const answer = confirm("Would you like to continue viewing my assignment?");
+        if (answer) {
+            const name = prompt("Enter your name", "");
+            const name = prompt("Enter your age");
+            alert(name + ", You checked my lab work!");
+        }
+        else alert("Let's check later!");
+    </script>
+</body>
+</html>
