--- a/tasks/task3.html
+++ b/tasks/task3.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Linear algorithms</title>
+</head>
+<body>
+    <script>
 
+		    "use strict";
+		    alert("Hello, you can calculate several tasks here");
+            const a = parseFloat(prompt("Task 1. Let's calculate the area of ​​the square, for this you need to enter the value of the side.", ""));
+            let s = (a * a);
+		    alert("The area is equal to: " + s);
+
+            const b = parseFloat(prompt("Task 2. To calculate the area of ​​a triangle by side and height, first you need to enter the sides.", ""));
+            let h = parseInt(prompt("Enter the height ", ""));
+		    let area = 0.5 * a * h
+            alert("The area of ​​the triangle is equal to: " + area);
+
+    </script>
+</body>
+</html>
