--- a/tasks/task4.html
+++ b/tasks/task4.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Dynamically generated page</title>
+</head>
+<body>
+    <script>
+        "use strict";
+        document.write('<p style="text-align:center;fontsize:42px;color:red;"i>Dynamically generated page');
+        document.write("<h1>task</h1>");
+        document.write('<p style="text-align:right;fontsize:32px;"i>task 4');
+        document.write("<p>Create a file lab1_4.html and put the following code in it. View the results of the script in the browser.");
+    </script>
+</body>
+</html>
