--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Laboratory work 11</title>
 </head>
 <body>
-    <p> <a href="tasks/task1.html">Task 1.</a> </p>
-    <p> <a href="tasks/task2.html">Task 2.</a> </p>
-    <p> <a href="tasks/task3.html">Task 3.</a> </p>
-    <p> <a href="tasks/task4.html">Task 4.</a> </p>
+    <p> <a href="tasks/task1.html" target="_blank">Task 1.</a> </p>
+    <p> <a href="tasks/task2.html" target="_blank">Task 2.</a> </p>
+    <p> <a href="tasks/task3.html" target="_blank">Task 3.</a> </p>
+    <p> <a href="tasks/task4.html" target="_blank">Task 4.</a> </p>
 </body>
 </html>
