--- a/tasks/task4.html
+++ b/tasks/task4.html
@@ -7,10 +7,10 @@
 <body>
     <script>
         "use strict";
-        document.write('<p style="text-align:center;font-size:42px;color:red;">Dynamically generated page');
+        document.write('<p style="text-align:center;font-size:42px;color:red;">Dynamically generated page.</p>');
         document.write("<h1>task</h1>");
-        document.write('<p style="text-align:right;font-size:32px;">task 4');
-        document.write("<p>Create a file lab1_4.html and put the following code in it. View the results of the script in the browser.");
+        document.write('<p style="text-align:right;font-size:32px;">task 4.</p>');
+        document.write("<p>Create a file lab1_4.html and put the following code in it. View the results of the script in the browser.</p>");
     </script>
 </body>
 </html>
